feat(backend): support get mock ticket credential with event registration
